Bug 308617 - "Rename" action in Project Navigator should also offer change of object's caption
Summary: "Rename" action in Project Navigator should also offer change of object's cap...
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: General (other bugs)
Version First Reported In: 2.0 alpha (KOffice 2.0 alpha)
Platform: unspecified All
: NOR normal
Target Milestone: 2.6
Assignee: Jarosław Staniek
URL: http://forum.kde.org/viewtopic.php?f=...
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-18 19:37 UTC by Jarosław Staniek
Modified: 2012-10-21 18:40 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.6.0
Sentry Crash Report:
staniek: Usability+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jarosław Staniek 2012-10-18 19:37:33 UTC
"Rename" action in Project Navigator should also offer change of object's caption. There is no way to change caption for object.


Reproducible: Always

Steps to Reproduce:
1. Rename any object in navigator.

Actual Results:  
Caption stays untouched and cannot be changed. For example name was "foo" and caption was "Foo". Now the name is "bar" but caption stays as "Foo".

Expected Results:  
Changing caption should be offered in the same Rename feature.
Comment 1 Jarosław Staniek 2012-10-21 18:40:02 UTC
Git commit 8bcbf0202be595ce3e324c13cbe590b2863c49d2 by Jaroslaw Staniek.
Committed on 19/10/2012 at 01:42.
Pushed by staniek into branch 'master'.

"Rename" action in Project Navigator can be used to change object's caption

Moreover:
*Before renaming any object, close window containing it
*Renaming object updates its position on sorted list in Project Navigator
REVIEW:106943
FIXED-IN:2.6.0

M  +1    -1    kexi/core/kexipart.cpp
M  +1    -1    kexi/core/kexipart.h
M  +92   -53   kexi/core/kexiproject.cpp
M  +7    -0    kexi/core/kexiproject.h
M  +35   -2    kexi/main/KexiMainWindow.cpp
M  +8    -3    kexi/main/KexiMainWindow.h
M  +4    -3    kexi/plugins/queries/kexiquerypart.cpp
M  +1    -1    kexi/plugins/queries/kexiquerypart.h
M  +23   -15   kexi/plugins/tables/kexitablepart.cpp
M  +1    -1    kexi/plugins/tables/kexitablepart.h
M  +3    -1    kexi/widget/KexiNameDialog.cpp
M  +14   -4    kexi/widget/KexiNameWidget.cpp
M  +3    -0    kexi/widget/KexiNameWidget.h
M  +35   -21   kexi/widget/navigator/KexiProjectModel.cpp
M  +7    -3    kexi/widget/navigator/KexiProjectModel.h
M  +1    -1    kexi/widget/navigator/KexiProjectModelItem.cpp
M  +49   -7    kexi/widget/navigator/KexiProjectNavigator.cpp
M  +1    -1    kexi/widget/navigator/KexiProjectNavigator.h

http://commits.kde.org/calligra/8bcbf0202be595ce3e324c13cbe590b2863c49d2