"Rename" action in Project Navigator can be used to change object's caption

Moreover:
*Before renaming any object, close window containing it
*Renaming object updates its position on sorted list in Project Navigator

BUG:308617
REVIEW:106943
FIXED-IN:2.6.0